[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"
# Used for atomic operations in utilities
atomic = "0.6.0"
actix = "0.13.1"
actix-web-actors = "4.2.0"
actix-cors = "0.7.0"

# Optional: include this section if you're planning to write tests
[dev-dependencies]
actix-rt = "2.9"
assert_matches = "1.5.0"